# opsml-core

./: .gitignore  Cargo.toml  README.md  codecov.yml  docker-compose.yml  dockerfile  makefile
.github/ISSUE_TEMPLATE/: bug_report_python.yml  feature_request.yml
.github/workflows/: dependency-review.yml  server-tests.yml  sql-tests.yml  storage-aws-tests.yml  storage-gcs-tests.yml  storage-local-tests.yml  storage-tests-client.yml  storage-tests.yml
crates/: makefile  test.sh
crates/opsml-core/: Cargo.toml
crates/opsml-core/src/core/: mod.rs
crates/opsml-core/src/core/http_client/: client.rs
crates/opsml-core/src/core/storage/: base.rs  google.rs  mod.rs
crates/opsml-core/src/core/utils/: error.rs
crates/opsml_auth/: Cargo.toml
crates/opsml_auth/src/: auth.rs  lib.rs  permission.rs  schema.rs
crates/opsml_constants/: Cargo.toml  Readme.md
crates/opsml_contracts/: Cargo.toml  Readme.md
crates/opsml_contracts/src/: lib.rs
crates/opsml_error/: Cargo.toml
crates/opsml_error/src/: error.rs
crates/opsml_logging/: Cargo.toml
crates/opsml_logging/src/: logging.rs
crates/opsml_registry/: Cargo.toml
crates/opsml_registry/src/: enums.rs  lib.rs  registry.rs
crates/opsml_registry/src/cards/: base.rs  data.rs  enums.rs  mod.rs  model.rs
crates/opsml_registry/src/client/: registry.rs
crates/opsml_registry/src/server/: registry.rs
crates/opsml_server/: Cargo.toml  Makefile
crates/opsml_server/src/: main.rs
crates/opsml_server/src/core/: error.rs  mod.rs  router.rs  setup.rs  state.rs
crates/opsml_server/src/core/auth/: middleware.rs  route.rs  schema.rs
crates/opsml_server/src/core/cards/: mod.rs  route.rs  util.rs
crates/opsml_server/src/core/debug/: debug.rs  mod.rs  route.rs  schema.rs
crates/opsml_server/src/core/files/: route.rs  schema.rs
crates/opsml_server/src/core/health/: route.rs
crates/opsml_server/src/core/logging/: logging.rs
crates/opsml_server/src/core/metric/: route.rs
crates/opsml_server/src/core/run/: route.rs
crates/opsml_server/src/core/settings/: route.rs  schema.rs
crates/opsml_server/src/core/storage/: client.rs
crates/opsml_server/tests/: populate_db.sql
crates/opsml_settings/: Cargo.toml  Makefile
crates/opsml_settings/src/: config.rs  error.rs  lib.rs
crates/opsml_sql/: Cargo.toml
crates/opsml_sql/src/: base.rs  lib.rs
crates/opsml_sql/src/enums/: client.rs
crates/opsml_sql/src/mysql/: client.rs  helper.rs
crates/opsml_sql/src/mysql/migrations/: 20241129142555_setup_tables.sql
crates/opsml_sql/src/postgres/: client.rs  helper.rs
crates/opsml_sql/src/postgres/migrations/: 20241129142526_setup_tables.sql
crates/opsml_sql/src/queries/: shared.rs
crates/opsml_sql/src/queries/scripts/: get_version.sql
crates/opsml_sql/src/schemas/: arguments.rs  schema.rs  utils.rs
crates/opsml_sql/src/sqlite/: client.rs  helper.rs  mod.rs  schema.rs
crates/opsml_sql/src/sqlite/migrations/: 20241129142517_setup_tables.sql
crates/opsml_sql/src/sqlite/queries/: helper.rs
crates/opsml_sql/src/sqlite/queries/scripts/: get_cards_with_version.sql  get_cards_without_version.sql
crates/opsml_sql/tests/: populate_mysql_test.sql  populate_postgres_test.sql  populate_sqlite_test.sql  populate_test_data.sql
crates/opsml_storage/: Cargo.toml  Makefile
crates/opsml_storage/src/: lib.rs
crates/opsml_storage/src/core/: mod.rs
crates/opsml_storage/src/core/http_client/: client.rs  contracts.rs
crates/opsml_storage/src/core/storage/: aws.rs  base.rs  enums.rs  filesystem.rs  google.rs  http.rs  local.rs  mod.rs
crates/opsml_storage/src/core/storage/aws/: client.rs
crates/opsml_storage/src/core/storage/client/: base.rs  mod.rs
crates/opsml_storage/src/core/storage/gcs/: client.rs
crates/opsml_storage/src/core/storage/local/: local_fs.rs
crates/opsml_storage/src/core/utils/: error.rs
crates/opsml_storage/src/storage/: base.rs  filesystem.rs  mod.rs
crates/opsml_storage/src/storage/aws/: client.rs
crates/opsml_storage/src/storage/azure/: client.rs
crates/opsml_storage/src/storage/enums/: client.rs
crates/opsml_storage/src/storage/gcs/: client.rs
crates/opsml_storage/src/storage/http/: base.rs  client.rs
crates/opsml_storage/src/storage/local/: client.rs
crates/opsml_todo/: Cargo.toml
crates/opsml_todo/src/: main.rs
crates/opsml_types/: Cargo.toml  Readme.md
crates/opsml_types/src/: constants.rs  contracts.rs  enums.rs  helper.rs  lib.rs  types.rs
crates/opsml_utils/: Cargo.toml
crates/opsml_utils/src/: color.rs  lib.rs  semver.rs  utils.rs
opsml_core/: Cargo.toml  makefile  pyproject.toml
opsml_core/python/opsml_core/: __init__.py  _opsml_core.pyi  model_interface.pyi
opsml_core/src/: lib.rs
opsml_core/tests/: conftest.py  test_card.py  test_http.py  test_model_interface.py  test_registry.py  test_shared.py
opsml_core/tests/cards/model/: test_interface.py
opsml_storage/: Cargo.toml  makefile  pyproject.toml
opsml_storage/python/opsml_storage/: __init__.py  _opsml_storage.pyi
opsml_storage/src/: lib.rs
opsml_storage/tests/: conftest.py  test_storage.py
opsml_storage_gcs/: Cargo.toml  pyproject.toml
opsml_storage_gcs/python/opsml_storage_gcs/: __init__.py  _opsml_storage_gcs.pyi
opsml_storage_gcs/src/: lib.rs
opsml_storage_gcs/tests/: conftest.py
opsml_storage_local/: Cargo.toml  makefile  pyproject.toml
opsml_storage_local/python/opsml_storage_local/: __init__.py  _opsml_storage_local.pyi
opsml_storage_local/src/: lib.rs
opsml_storage_local/tests/: conftest.py  test_google_storage.py  test_http.py  test_local_storage.py
opsml_storage_s3/: Cargo.toml  makefile  pyproject.toml
opsml_storage_s3/python/opsml_storage_s3/: __init__.py  _opsml_storage_s3.pyi
opsml_storage_s3/src/: lib.rs
opsml_storage_s3/tests/: _test_storage.py  conftest.py  test_aws_storage.py
py-opsml-core/: Cargo.toml  README.md  pyproject.toml
py-opsml-core/python/opsml_core/: __init__.py  _opsml_core.pyi
py-opsml-core/src/: lib.rs
py-opsml-core/src/py_opsml_core/: _opsml_core.rs  mod.rs
py_packages/opsml_storage/: Cargo.toml  makefile  pyproject.toml
(+26 files in other folders)
