[workspace]
resolver = "2"
members = [
  "crates/opsml_storage",
  "opsml_storage_s3",
  "opsml_storage_gcs",
  "opsml_storage_local",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Steven Forrester <sjforrester32@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/opsml-core"


[workspace.dependencies]
pyo3 = { version = "0.22", features = ["experimental-async"] }
opsml-storage = { path = "crates/opsml_storage" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true