[workspace]
resolver = "2"
members = [
  "crates/*",
  "opsml_core",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Steven Forrester <sjforrester32@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/opsml-core"


[workspace.dependencies]

opsml-contracts = { path = "crates/opsml_contracts" }
opsml-error = { path = "crates/opsml_error" }
opsml-logging = { path = "crates/opsml_logging" }
opsml-server = { path = "crates/opsml_server" }
opsml-settings = { path = "crates/opsml_settings" }
opsml-storage = { path = "crates/opsml_storage" }
opsml-utils = { path = "crates/opsml_utils" }


anyhow = "1.0.93"
async-trait = "0.*"
aws-sdk-s3 = "1.*"
azure_core = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
aws-config = "1.5.10"
aws-smithy-types = { version = "1.2.9", features = ["rt-tokio", "http-body-0-4-x"] }
aws-types = "1.*"
base64 = "0.*"
bytes = "1.*"
axum = { version = "0.7.7", features = ["multipart"] }
colored = "2.*"
colored_json = "5.*"
futures = "0.*"
futures-util = "0.*"
google-cloud-storage = { version = "0.*", features  = ["auth"] }
google-cloud-auth = "0.*"
google-cloud-token = "0.*"
indicatif = "0.*"
pyo3 = { version = "0.22", features = ["extension-module", "anyhow", "gil-refs"] }
rand = "0.8.5"
reqwest = { version = "0.*", features = ["json", "stream", "multipart", "rustls-tls", "rustls-tls-native-roots" ], default-features = false }
reqwest-middleware = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "2.*"
time = "0.*"

tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.12",  features = ["codec", "io"]}
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json", "time"]}
walkdir = "2.*"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.release-no-lto]
inherits = "release"
lto = false
