[package]
name = "opsml-storage-local"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opsml_storage_local"
crate-type = ["cdylib", "rlib"]


[dependencies]
bytes = "1.*"
futures-core = "0.*"
opsml-storage = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = "1.*"

[features]
default = []


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
