[package]
name = "py-opsml-core"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scouter"
crate-type = ["cdylib", "rlib"]


[dependencies]
bytes = "1.8.0"
futures-core = "0.3.31"
opsml-core = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = "1.41.1"

[features]
default = []
google_storage = ["opsml-core/google-cloud-storage", "opsml-core/google-cloud-auth", "opsml-core/google-cloud-token"]


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
