[package]
name = "opsml-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
pyo3 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
native-tls = { version = "0.2", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream", ], default-features = false }
tokio = { version = "1.34", features = ["full"] }
tokio-retry = "0.3.0"
thiserror = "2.0.0"
serde_json = "1.0.132"
backon = "1.2.0"


[dev-dependencies]
mockito = "1.4.0"
reqwest_mock = "0.7.0"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
