[package]
name = "opsml-auth"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
axum-login = { workspace = true }
chrono = { workspace = true }
password-auth = { workspace = true }
serde = { workspace = true }

opsml-sql = { workspace = true }
 