[package]
name = "opsml-contracts"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "MIT"
description = "Server and client contracts for the opsml"


[lib]
doctest = false

[dependencies]
opsml-settings = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
