[package]
name = "opsml-registry"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-error = { workspace = true }
opsml-types = { workspace = true }
opsml-settings = { workspace = true }
opsml-sql = { workspace = true, optional = true }
opsml-storage = { workspace = true }
pyo3 = { workspace = true }
serde_qs = { workspace = true }
sqlx = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
tracing = { workspace = true }


[features]
server = ["opsml-sql", "sqlx", "semver"]