[package]
name = "opsml-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
serde = { version = "1.*", features = ["derive"] }
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.*"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json", "time"]}
axum = { version = "0.7.7", features = ["multipart"] }
opsml-settings = { workspace = true }

# Conditional dependencies
opsml-storage = { workspace = true, optional = true, features = [] }
async-trait = "0.1.83"
anyhow = "1.0.93"
time = "0.3.36"
thiserror = "2.0.3"
bytes = "1.8.0"

[features]
default = ["opsml-storage"]
google_storage = ["opsml-storage/google_storage"]
aws_storage = ["opsml-storage/aws_storage"]


[dev-dependencies]
mockall = "0.*"
mockito = "1.*"
rand = "0.8.5"
tower = { version = "0.4.13", features = ["util"] }

[profile.release]
workspace = true
