[package]
name = "opsml-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7.7", features = ["multipart"] }
opsml-settings = { workspace = true }
opsml-storage = { workspace = true }

# Conditional dependencies
async-trait = "0.1.83"
anyhow = "1.0.93"
time = "0.3.36"
thiserror = "2.0.3"
bytes = "1.8.0"

[features]
#google_storage = ["opsml-storage/google_storage"]
#aws_storage = ["opsml-storage/aws_storage"]


[dev-dependencies]
mockall = "0.*"
mockito = "1.*"
rand = "0.8.5"
tower = { version = "0.4.13", features = ["util"] }

[profile.release]
workspace = true
