[package]
name = "opsml-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7.7", features = ["multipart"] }
bytes = { workspace = true }
opsml-contracts = { workspace = true }
opsml-logging = { workspace = true }
opsml-settings = { workspace = true }
opsml-storage = { workspace = true }
opsml-utils = { workspace = true }
opsml-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = "0.*"
mockito = "1.*"
rand = "0.8.5"
tower = { version = "0.4.13", features = ["util"] }

[profile.release]
workspace = true
