[package]
name = "opsml-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
opsml-error = { workspace = true }
opsml-logging = { workspace = true }
opsml-settings = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }