[package]
name = "opsml-storage"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
pyo3 = { workspace = true }
serde = { version = "1.*", features = ["derive"] }
reqwest = { version = "0.*", features = ["json", "stream", "multipart", "rustls-tls", "rustls-tls-native-roots" ], default-features = false }
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.*"
serde_json = "1.*"
futures = "0.*"
tokio-util = { version = "0.*",  features = ["codec"]}

# storage dependencies
google-cloud-storage = { version = "0.*", features  = ["auth"], optional = true }
google-cloud-auth = { version ="0.*", optional = true }
google-cloud-token = { version = "0.*", optional = true }
base64 = "0.*"
bytes = "1.*"
mockall = "0.*"
async-trait = "0.*"
walkdir = "2.*"
aws-sdk-s3 = { version = "1.*", optional = true }
azure_core = { version = "0.21.0", optional = true }
azure_storage = { version = "0.21.0", optional = true }
azure_storage_blobs = { version = "0.21.0", optional = true }
aws-config = { version = "1.5.10", optional = true }


[features]
default = []
google_storage = ["google-cloud-storage", "google-cloud-auth", "google-cloud-token"]
aws_storage = ["aws-sdk-s3", "aws-config"]
azure = ["azure_core", "azure_storage", "azure_storage_blobs"]
full = ["google_storage", "aws_storage", "azure"]

[dev-dependencies]
mockall = "0.*"
mockito = "1.*"
rand = "0.8.5"
reqwest_mock = "0.*"
tempfile = "3.*"
uuid = { version = "1.11.0", features = ["v4"] }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
