[package]
name = "opsml-storage"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Core rust library for the opsml project"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types = { workspace = true }
azure_core = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-storage = { workspace = true }
google-cloud-token = { workspace = true }
indicatif = { workspace = true }
opsml-error = { workspace = true }
opsml-settings = { workspace = true }
opsml-utils = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
walkdir = { workspace = true }


[dev-dependencies]
mockall = "0.*"
mockito = "1.*"
rand = "0.8.5"
reqwest_mock = "0.*"
tempfile = "3.*"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
workspace = true
