[package]
name = "opsml-utils"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
opsml-error = { workspace = true }

colored = { workspace = true}
colored_json = { workspace = true}
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }